cmake_path(GET CMAKE_CURRENT_LIST_DIR FILENAME ModName)
string(REPLACE " " "_" ModName ${ModName})

set(TGT ${ModName})
message("ModName: ${ModName}")

FILE(GLOB DIR_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
    "*.h"
    "*.cpp"
)

message("qt_add_library(\${TGT} STATIC")
    foreach(f ${DIR_SRCS})
    message("    \"${f}\"")
    endforeach()
message(")")

qt_add_library(${TGT}
    STATIC 
    ${DIR_SRCS}
)

set(QSS_FILES
    "../StyleSheet/dark/FluAmPmView.qss"
    "../StyleSheet/dark/FluAppBarButton.qss"
    "../StyleSheet/dark/FluAppBarToggleButton.qss"
    "../StyleSheet/dark/FluAutoSuggestBox.qss"
    "../StyleSheet/dark/FluBorder.qss"
    "../StyleSheet/dark/FluBusyProgressRing.qss"
    "../StyleSheet/dark/FluCalendarDatePicker.qss"
    "../StyleSheet/dark/FluCalendarMonthView.qss"
    "../StyleSheet/dark/FluCalendarSelectMonthView.qss"
    "../StyleSheet/dark/FluCalendarSelectYearView.qss"
    "../StyleSheet/dark/FluCalendarView.qss"
    "../StyleSheet/dark/FluCalendarViewTitle.qss"
    "../StyleSheet/dark/FluCalendarViewWeakTitle.qss"
    "../StyleSheet/dark/FluCheckBox.qss"
    "../StyleSheet/dark/FluCircleDot.qss"
    "../StyleSheet/dark/FluCodeBox.qss"
    "../StyleSheet/dark/FluColorFlyout.qss"
    "../StyleSheet/dark/FluComboBox.qss"
    "../StyleSheet/dark/FluComboBoxEx.qss"
    "../StyleSheet/dark/FluConfirmFlyout.qss"
    "../StyleSheet/dark/FluDatePicker.qss"
    "../StyleSheet/dark/FluDatePickerView.qss"
    "../StyleSheet/dark/FluDisplayBox.qss"
    "../StyleSheet/dark/FluDisplayBoxEx.qss"
    "../StyleSheet/dark/FluDisplayIconBox.qss"
    "../StyleSheet/dark/FluDoubleSpinBox.qss"
    "../StyleSheet/dark/FluDropDownButton.qss"
    "../StyleSheet/dark/FluExpander.qss"
    "../StyleSheet/dark/FluFlipView.qss"
    "../StyleSheet/dark/FluFWScrollView.qss"
    "../StyleSheet/dark/FluGraphicalButton.qss"
    "../StyleSheet/dark/FluHCard.qss"
    "../StyleSheet/dark/FluHSplitLine.qss"
    "../StyleSheet/dark/FluHyperLinkButton.qss"
    "../StyleSheet/dark/FluIconButton.qss"
    "../StyleSheet/dark/FluLabel.qss"
    "../StyleSheet/dark/FluLineEdit.qss"
    "../StyleSheet/dark/FluListView.qss"
    "../StyleSheet/dark/FluLoopView.qss"
    "../StyleSheet/dark/FluMenu.qss"
    "../StyleSheet/dark/FluMenuBar.qss"
    "../StyleSheet/dark/FluMessageBox.qss"
    "../StyleSheet/dark/FluNavigationItem.qss"
    "../StyleSheet/dark/FluPasswordBox.qss"
    "../StyleSheet/dark/FluPivot.qss"
    "../StyleSheet/dark/FluPivotTitleBar.qss"
    "../StyleSheet/dark/FluPivotTitleBarItem.qss"
    "../StyleSheet/dark/FluPushButton.qss"
    "../StyleSheet/dark/FluRadioButton.qss"
    "../StyleSheet/dark/FluRepeatButton.qss"
    "../StyleSheet/dark/FluSearchLineEdit.qss"
    "../StyleSheet/dark/FluSettingsLabelBox.qss"
    "../StyleSheet/dark/FluSettingsSelectBox.qss"
    "../StyleSheet/dark/FluSettingsVersionBox.qss"
    "../StyleSheet/dark/FluShortInfoBar.qss"
    "../StyleSheet/dark/FluSlider.qss"
    "../StyleSheet/dark/FluSpinBox.qss"
    "../StyleSheet/dark/FluSplitButton.qss"
    "../StyleSheet/dark/FluStyleButton.qss"
    "../StyleSheet/dark/FluTabWidget.qss"
    "../StyleSheet/dark/FluTextEdit.qss"
    "../StyleSheet/dark/FluTimePicker24H.qss"
    "../StyleSheet/dark/FluTimePicker24HView.qss"
    "../StyleSheet/dark/FluTimePickerAP.qss"
    "../StyleSheet/dark/FluTimePickerAPView.qss"
    "../StyleSheet/dark/FluToggleButton.qss"
    "../StyleSheet/dark/FluToggleSwitch.qss"
    "../StyleSheet/dark/FluVCard.qss"
    "../StyleSheet/dark/FluVFlipView.qss"
    "../StyleSheet/dark/FluVFlyout.qss"
    "../StyleSheet/dark/FluVNavigationFlyIconTextItem.qss"
    "../StyleSheet/dark/FluVNavigationIconTextItem.qss"
    "../StyleSheet/dark/FluVNavigationMenuItem.qss"
    "../StyleSheet/dark/FluVNavigationSearchItem.qss"
    "../StyleSheet/dark/FluVNavigationSettingsItem.qss"
    "../StyleSheet/dark/FluVNavigationView.qss"
    "../StyleSheet/dark/FluVRadioGroupBox.qss"
    "../StyleSheet/dark/FluVScrollView.qss"
    "../StyleSheet/dark/FluVSplitLine.qss"
    "../StyleSheet/light/FluAmPmView.qss"
    "../StyleSheet/light/FluAppBarButton.qss"
    "../StyleSheet/light/FluAppBarToggleButton.qss"
    "../StyleSheet/light/FluAutoSuggestBox.qss"
    "../StyleSheet/light/FluBorder.qss"
    "../StyleSheet/light/FluBusyProgressRing.qss"
    "../StyleSheet/light/FluCalendarDatePicker.qss"
    "../StyleSheet/light/FluCalendarMonthView.qss"
    "../StyleSheet/light/FluCalendarSelectMonthView.qss"
    "../StyleSheet/light/FluCalendarSelectYearView.qss"
    "../StyleSheet/light/FluCalendarView.qss"
    "../StyleSheet/light/FluCalendarViewTitle.qss"
    "../StyleSheet/light/FluCalendarViewWeakTitle.qss"
    "../StyleSheet/light/FluCheckBox.qss"
    "../StyleSheet/light/FluCircleDot.qss"
    "../StyleSheet/light/FluCodeBox.qss"
    "../StyleSheet/light/FluColorButton.qss"
    "../StyleSheet/light/FluColorFlyout.qss"
    "../StyleSheet/light/FluColorLabel.qss"
    "../StyleSheet/light/FluComboBox.qss"
    "../StyleSheet/light/FluComboBoxEx.qss"
    "../StyleSheet/light/FluConfirmFlyout.qss"
    "../StyleSheet/light/FluDatePicker.qss"
    "../StyleSheet/light/FluDatePickerView.qss"
    "../StyleSheet/light/FluDisplayBox.qss"
    "../StyleSheet/light/FluDisplayBoxEx.qss"
    "../StyleSheet/light/FluDisplayIconBox.qss"
    "../StyleSheet/light/FluDoubleSpinBox.qss"
    "../StyleSheet/light/FluDropDownButton.qss"
    "../StyleSheet/light/FluExpander.qss"
    "../StyleSheet/light/FluFWScrollView.qss"
    "../StyleSheet/light/FluGraphicalButton.qss"
    "../StyleSheet/light/FluHCard.qss"
    "../StyleSheet/light/FluHFlipView.qss"
    "../StyleSheet/light/FluHNavigationFlyIconTextItem.qss"
    "../StyleSheet/light/FluHNavigationIconTextItem.qss"
    "../StyleSheet/light/FluHNavigationMoreItem.qss"
    "../StyleSheet/light/FluHNavigationSettingsItem.qss"
    "../StyleSheet/light/FluHNavigationView.qss"
    "../StyleSheet/light/FluHScrollView.qss"
    "../StyleSheet/light/FluHSplitLine.qss"
    "../StyleSheet/light/FluHyperLinkButton.qss"
    "../StyleSheet/light/FluIconButton.qss"
    "../StyleSheet/light/FluInfoBadge.qss"
    "../StyleSheet/light/FluLabel.qss"
    "../StyleSheet/light/FluLineEdit.qss"
    "../StyleSheet/light/FluListView.qss"
    "../StyleSheet/light/FluLoopView.qss"
    "../StyleSheet/light/FluMenu.qss"
    "../StyleSheet/light/FluMenuBar.qss"
    "../StyleSheet/light/FluMenuBarItem.qss"
    "../StyleSheet/light/FluMessageBox.qss"
    "../StyleSheet/light/FluPasswordBox.qss"
    "../StyleSheet/light/FluPivot.qss"
    "../StyleSheet/light/FluPivotTitleBar.qss"
    "../StyleSheet/light/FluPivotTitleBarItem.qss"
    "../StyleSheet/light/FluProgressBar.qss"
    "../StyleSheet/light/FluPushButton.qss"
    "../StyleSheet/light/FluRadioButton.qss"
    "../StyleSheet/light/FluRatingControl.qss"
    "../StyleSheet/light/FluRepeatButton.qss"
    "../StyleSheet/light/FluRotationButton.qss"
    "../StyleSheet/light/FluSearchLineEdit.qss"
    "../StyleSheet/light/FluSettingsLabelBox.qss"
    "../StyleSheet/light/FluSettingsSelectBox.qss"
    "../StyleSheet/light/FluSettingsVersionBox.qss"
    "../StyleSheet/light/FluShortInfoBar.qss"
    "../StyleSheet/light/FluSlider.qss"
    "../StyleSheet/light/FluSpinBox.qss"
    "../StyleSheet/light/FluSplitButton.qss"
    "../StyleSheet/light/FluStyleButton.qss"
    "../StyleSheet/light/FluTabBar.qss"
    "../StyleSheet/light/FluTabBarContent.qss"
    "../StyleSheet/light/FluTabBarItem.qss"
    "../StyleSheet/light/FluTabView.qss"
    "../StyleSheet/light/FluTabWidget.qss"
    "../StyleSheet/light/FluTextEdit.qss"
    "../StyleSheet/light/FluTimePicker24H.qss"
    "../StyleSheet/light/FluTimePicker24HView.qss"
    "../StyleSheet/light/FluTimePickerAP.qss"
    "../StyleSheet/light/FluTimePickerAPView.qss"
    "../StyleSheet/light/FluToggleButton.qss"
    "../StyleSheet/light/FluToggleSwitch.qss"
    "../StyleSheet/light/FluVCard.qss"
    "../StyleSheet/light/FluVFlipView.qss"
    "../StyleSheet/light/FluVFlyout.qss"
    "../StyleSheet/light/FluVNavigationFlyIconTextItem.qss"
    "../StyleSheet/light/FluVNavigationIconTextItem.qss"
    "../StyleSheet/light/FluVNavigationMenuItem.qss"
    "../StyleSheet/light/FluVNavigationSearchItem.qss"
    "../StyleSheet/light/FluVNavigationSettingsItem.qss"
    "../StyleSheet/light/FluVNavigationView.qss"
    "../StyleSheet/light/FluVRadioGroupBox.qss"
    "../StyleSheet/light/FluVScrollView.qss"
    "../StyleSheet/light/FluVSplitLine.qss"
)
source_group(TREE ${CMAKE_SOURCE_DIR} FILES ${QSS_FILES})

qt_add_resources(${TGT} "FluControlsQss"
    PREFIX "/"
    BASE ".."
    FILES
    ${QSS_FILES}
)

set(RES_FILES
    "../res/badgelogo.scale-100.png"
    "../res/badgelogo.scale-140.png"
    "../res/badgelogo.scale-180.png"
    "../res/blank.png"
    "../res/ChevronDown.png"
    "../res/ChevronRight.png"
    "../res/ChromeClose.png"
    "../res/CoffeeCup.png"
    "../res/Contacts.txt"
    "../res/CopyLinkTeachingTip.png"
    "../res/folder.png"
    "../res/GalleryHeaderImage.png"
    "../res/LottieLogo1.png"
    "../res/ninegrid.gif"
    "../res/ScrollBottom.png"
    "../res/ScrollTop.png"
    # "../res/Segoe_Fluent_Icons.ttf"
    "../res/Slices.png"
    "../res/Slices2.png"
    "../res/SunBlack.png"
    "../res/SunWhite.png"
    "../res/Typography.dark.png"
    "../res/Typography.light.png"
    "../res/widelogo.scale-100.png"
    "../res/widelogo.scale-140.png"
    "../res/widelogo.scale-180.png"
    "../res/WideLogo.scale-80.png"
    "../res/ControlImages/Acrylic.png"
    "../res/ControlImages/AnimatedIcon.png"
    "../res/ControlImages/AnimatedVisualPlayer.png"
    "../res/ControlImages/AnimationInterop.png"
    "../res/ControlImages/AnnotatedScrollBar.png"
    "../res/ControlImages/AppBarButton.png"
    "../res/ControlImages/AppBarSeparator.png"
    "../res/ControlImages/AppBarToggleButton.png"
    "../res/ControlImages/AutomationProperties.png"
    "../res/ControlImages/AutoSuggestBox.png"
    "../res/ControlImages/Border.png"
    "../res/ControlImages/BreadcrumbBar.png"
    "../res/ControlImages/Button.png"
    "../res/ControlImages/CalendarDatePicker.png"
    "../res/ControlImages/CalendarView.png"
    "../res/ControlImages/Canvas.png"
    "../res/ControlImages/CheckBox.png"
    "../res/ControlImages/Clipboard.png"
    "../res/ControlImages/ColorPaletteResources.png"
    "../res/ControlImages/ColorPicker.png"
    "../res/ControlImages/ComboBox.png"
    "../res/ControlImages/CommandBar.png"
    "../res/ControlImages/CommandBarFlyout.png"
    "../res/ControlImages/CompactSizing.png"
    "../res/ControlImages/ConnectedAnimation.png"
    "../res/ControlImages/ContentDialog.png"
    "../res/ControlImages/CreateMultipleWindows.png"
    "../res/ControlImages/DataGrid.png"
    "../res/ControlImages/DatePicker.png"
    "../res/ControlImages/DropDownButton.png"
    "../res/ControlImages/EasingFunction.png"
    "../res/ControlImages/Expander.png"
    "../res/ControlImages/FilePicker.png"
    "../res/ControlImages/FlipView.png"
    "../res/ControlImages/Flyout.png"
    "../res/ControlImages/Grid.png"
    "../res/ControlImages/GridView.png"
    "../res/ControlImages/HyperlinkButton.png"
    "../res/ControlImages/IconElement.png"
    "../res/ControlImages/Image.png"
    "../res/ControlImages/ImplicitTransition.png"
    "../res/ControlImages/InfoBadge.png"
    "../res/ControlImages/InfoBar.png"
    "../res/ControlImages/InkCanvas.png"
    "../res/ControlImages/InkToolbar.png"
    "../res/ControlImages/InputValidation.png"
    "../res/ControlImages/ItemsRepeater.png"
    "../res/ControlImages/ItemsView.png"
    "../res/ControlImages/Line.png"
    "../res/ControlImages/ListBox.png"
    "../res/ControlImages/ListView.png"
    "../res/ControlImages/MediaPlayerElement.png"
    "../res/ControlImages/MenuBar.png"
    "../res/ControlImages/MenuFlyout.png"
    "../res/ControlImages/NavigationView.png"
    "../res/ControlImages/NumberBox.png"
    "../res/ControlImages/PageTransition.png"
    "../res/ControlImages/ParallaxView.png"
    "../res/ControlImages/PasswordBox.png"
    "../res/ControlImages/PersonPicture.png"
    "../res/ControlImages/PipsPager.png"
    "../res/ControlImages/Pivot.png"
    "../res/ControlImages/Placeholder.png"
    "../res/ControlImages/ProgressBar.png"
    "../res/ControlImages/ProgressRing.png"
    "../res/ControlImages/PullToRefresh.png"
    "../res/ControlImages/RadialGradientBrush.png"
    "../res/ControlImages/RadioButton.png"
    "../res/ControlImages/RadioButtons.png"
    "../res/ControlImages/RatingControl.png"
    "../res/ControlImages/RelativePanel.png"
    "../res/ControlImages/RepeatButton.png"
    "../res/ControlImages/RevealFocus.png"
    "../res/ControlImages/RichEditBox.png"
    "../res/ControlImages/RichTextBlock.png"
    "../res/ControlImages/ScrollView.png"
    "../res/ControlImages/ScrollViewer.png"
    "../res/ControlImages/SemanticZoom.png"
    "../res/ControlImages/Shape.png"
    "../res/ControlImages/Slider.png"
    "../res/ControlImages/Sound.png"
    "../res/ControlImages/SplitButton.png"
    "../res/ControlImages/SplitView.png"
    "../res/ControlImages/StackPanel.png"
    "../res/ControlImages/StandardUICommand.png"
    "../res/ControlImages/SwipeControl.png"
    "../res/ControlImages/TabView.png"
    "../res/ControlImages/TeachingTip.png"
    "../res/ControlImages/TextBlock.png"
    "../res/ControlImages/TextBox.png"
    "../res/ControlImages/ThemeTransition.png"
    "../res/ControlImages/TimePicker.png"
    "../res/ControlImages/TitleBar.png"
    "../res/ControlImages/ToggleButton.png"
    "../res/ControlImages/ToggleSplitButton.png"
    "../res/ControlImages/ToggleSwitch.png"
    "../res/ControlImages/ToolTip.png"
    "../res/ControlImages/TreeView.png"
    "../res/ControlImages/VariableSizedWrapGrid.png"
    "../res/ControlImages/Viewbox.png"
    "../res/ControlImages/WebView.png"
    "../res/ControlImages/XamlUICommand.png"
    "../res/ControlResImages/CheckBox-Black.png"
    "../res/ControlResImages/CheckBox-White.png"
    "../res/ControlResImages/CheckBoxPressed-Black.png"
    "../res/ControlResImages/CheckBoxPressed-White.png"
    "../res/ControlResImages/ChevronDown-Dark.png"
    "../res/ControlResImages/ChevronDown-Light.png"
    "../res/ControlResImages/ChevronRight-Light.png"
    "../res/ControlResImages/RadioButton-Black.png"
    "../res/ControlResImages/RadioButton-White.png"
    "../res/ControlResImages/RadioButtonHover-Black.png"
    "../res/ControlResImages/RadioButtonHover-White.png"
    "../res/ControlResImages/RadioButtonPressed-Black.png"
    "../res/ControlResImages/RadioButtonPressed-White.png"
    "../res/ControlResImages/SpinBoxDown-Dark.png"
    "../res/ControlResImages/SpinBoxDown-Light.png"
    "../res/ControlResImages/SpinBoxDownDisabled-Dark.png"
    "../res/ControlResImages/SpinBoxDownDisabled-Light.png"
    "../res/ControlResImages/SpinBoxUp-Dark.png"
    "../res/ControlResImages/SpinBoxUp-Light.png"
    "../res/ControlResImages/SpinBoxUpDisabled-Dark.png"
    "../res/ControlResImages/SpinBoxUpDisabled-Light.png"
    "../res/ControlResImages/ToggleSwitchDisabled-Dark.png"
    "../res/ControlResImages/ToggleSwitchDisabled-light.png"
    "../res/ControlResImages/ToggleSwitchOff-Dark.png"
    "../res/ControlResImages/ToggleSwitchOff-light.png"
    "../res/ControlResImages/ToggleSwitchOffHover-Dark.png"
    "../res/ControlResImages/ToggleSwitchOffHover-light.png"
    "../res/ControlResImages/ToggleSwitchOffPressed-Dark.png"
    "../res/ControlResImages/ToggleSwitchOffPressed-light.png"
    "../res/ControlResImages/ToggleSwitchOn-Dark.png"
    "../res/ControlResImages/ToggleSwitchOn-light.png"
    "../res/ControlResImages/ToggleSwitchOnHover-Dark.png"
    "../res/ControlResImages/ToggleSwitchOnHover-light.png"
    "../res/ControlResImages/ToggleSwitchOnPressed-Dark.png"
    "../res/ControlResImages/ToggleSwitchOnPressed-light.png"
    "../res/HomeHeaderTiles/github-mark-white.png"
    "../res/HomeHeaderTiles/github-mark-white.svg"
    "../res/HomeHeaderTiles/github-mark.png"
    "../res/HomeHeaderTiles/github-mark.svg"
    "../res/HomeHeaderTiles/Header-Store.dark.png"
    "../res/HomeHeaderTiles/Header-Store.light.png"
    "../res/HomeHeaderTiles/Header-Toolkit.png"
    "../res/HomeHeaderTiles/Header-WindowsDesign.png"
    "../res/HomeHeaderTiles/Header-WinUIGallery.png"
    "../res/SampleMedia/cliff.jpg"
    "../res/SampleMedia/fishes.wmv"
    "../res/SampleMedia/grapes.jpg"
    "../res/SampleMedia/ladybug.wmv"
    "../res/SampleMedia/LandscapeImage1.jpg"
    "../res/SampleMedia/LandscapeImage10.jpg"
    "../res/SampleMedia/LandscapeImage11.jpg"
    "../res/SampleMedia/LandscapeImage12.jpg"
    "../res/SampleMedia/LandscapeImage13.jpg"
    "../res/SampleMedia/LandscapeImage2.jpg"
    "../res/SampleMedia/LandscapeImage3.jpg"
    "../res/SampleMedia/LandscapeImage4.jpg"
    "../res/SampleMedia/LandscapeImage5.jpg"
    "../res/SampleMedia/LandscapeImage6.jpg"
    "../res/SampleMedia/LandscapeImage7.jpg"
    "../res/SampleMedia/LandscapeImage8.jpg"
    "../res/SampleMedia/LandscapeImage9.jpg"
    "../res/SampleMedia/MirrorPCConsent.svg"
    "../res/SampleMedia/rainier.jpg"
    "../res/SampleMedia/sunset.jpg"
    "../res/SampleMedia/treetops.jpg"
    "../res/SampleMedia/valley.jpg"
    "../res/TabViewIcons/cmd.png"
    "../res/TabViewIcons/linux.png"
    "../res/TabViewIcons/powershell.png"
    "../res/Tiles/BadgeLogo.scale-100.png"
    "../res/Tiles/BadgeLogo.scale-125.png"
    "../res/Tiles/BadgeLogo.scale-150.png"
    "../res/Tiles/BadgeLogo.scale-200.png"
    "../res/Tiles/BadgeLogo.scale-400.png"
    "../res/Tiles/GalleryIcon.ico"
    "../res/Tiles/LargeTile.scale-100.png"
    "../res/Tiles/LargeTile.scale-125.png"
    "../res/Tiles/LargeTile.scale-150.png"
    "../res/Tiles/LargeTile.scale-200.png"
    "../res/Tiles/LargeTile.scale-400.png"
    "../res/Tiles/SmallTile-sdk.altform-lightunplated_targetsize-16.png"
    "../res/Tiles/SmallTile-sdk.altform-lightunplated_targetsize-24.png"
    "../res/Tiles/SmallTile-sdk.altform-lightunplated_targetsize-256.png"
    "../res/Tiles/SmallTile-sdk.altform-lightunplated_targetsize-32.png"
    "../res/Tiles/SmallTile-sdk.altform-lightunplated_targetsize-48.png"
    "../res/Tiles/SmallTile-sdk.altform-unplated_targetsize-16.png"
    "../res/Tiles/SmallTile-sdk.altform-unplated_targetsize-20.png"
    "../res/Tiles/SmallTile-sdk.altform-unplated_targetsize-24.png"
    "../res/Tiles/SmallTile-sdk.altform-unplated_targetsize-256.png"
    "../res/Tiles/SmallTile-sdk.altform-unplated_targetsize-30.png"
    "../res/Tiles/SmallTile-sdk.altform-unplated_targetsize-32.png"
    "../res/Tiles/SmallTile-sdk.altform-unplated_targetsize-36.png"
    "../res/Tiles/SmallTile-sdk.altform-unplated_targetsize-40.png"
    "../res/Tiles/SmallTile-sdk.altform-unplated_targetsize-48.png"
    "../res/Tiles/SmallTile-sdk.altform-unplated_targetsize-60.png"
    "../res/Tiles/SmallTile-sdk.altform-unplated_targetsize-64.png"
    "../res/Tiles/SmallTile-sdk.altform-unplated_targetsize-72.png"
    "../res/Tiles/SmallTile-sdk.altform-unplated_targetsize-80.png"
    "../res/Tiles/SmallTile-sdk.altform-unplated_targetsize-96.png"
    "../res/Tiles/SmallTile-sdk.scale-100.png"
    "../res/Tiles/SmallTile-sdk.scale-125.png"
    "../res/Tiles/SmallTile-sdk.scale-150.png"
    "../res/Tiles/SmallTile-sdk.scale-200.png"
    "../res/Tiles/SmallTile-sdk.scale-400.png"
    "../res/Tiles/SmallTile-sdk.targetsize-16.png"
    "../res/Tiles/SmallTile-sdk.targetsize-20.png"
    "../res/Tiles/SmallTile-sdk.targetsize-24.png"
    "../res/Tiles/SmallTile-sdk.targetsize-256.png"
    "../res/Tiles/SmallTile-sdk.targetsize-30.png"
    "../res/Tiles/SmallTile-sdk.targetsize-32.png"
    "../res/Tiles/SmallTile-sdk.targetsize-36.png"
    "../res/Tiles/SmallTile-sdk.targetsize-40.png"
    "../res/Tiles/SmallTile-sdk.targetsize-48.png"
    "../res/Tiles/SmallTile-sdk.targetsize-60.png"
    "../res/Tiles/SmallTile-sdk.targetsize-64.png"
    "../res/Tiles/SmallTile-sdk.targetsize-72.png"
    "../res/Tiles/SmallTile-sdk.targetsize-80.png"
    "../res/Tiles/SmallTile-sdk.targetsize-96.png"
    "../res/Tiles/SmallTile.scale-100.png"
    "../res/Tiles/SmallTile.scale-125.png"
    "../res/Tiles/SmallTile.scale-150.png"
    "../res/Tiles/SmallTile.scale-200.png"
    "../res/Tiles/SmallTile.scale-400.png"
    "../res/Tiles/splash-sdk.scale-100.png"
    "../res/Tiles/splash-sdk.scale-125.png"
    "../res/Tiles/splash-sdk.scale-150.png"
    "../res/Tiles/splash-sdk.scale-200.png"
    "../res/Tiles/splash-sdk.scale-400.png"
    "../res/Tiles/squaretile-sdk.scale-100.png"
    "../res/Tiles/squaretile-sdk.scale-125.png"
    "../res/Tiles/squaretile-sdk.scale-150.png"
    "../res/Tiles/squaretile-sdk.scale-200.png"
    "../res/Tiles/squaretile-sdk.scale-400.png"
    "../res/Tiles/StoreLogo-sdk.scale-100.png"
    "../res/Tiles/StoreLogo-sdk.scale-125.png"
    "../res/Tiles/StoreLogo-sdk.scale-150.png"
    "../res/Tiles/StoreLogo-sdk.scale-200.png"
    "../res/Tiles/StoreLogo-sdk.scale-400.png"
    "../res/Tiles/Tile_General.png"
    "../res/Tiles/TitlebarLogo.png"
    "../res/Tiles/widelogo.scale-100.png"
    "../res/Tiles/widelogo.scale-140.png"
    "../res/Tiles/widelogo.scale-180.png"
    "../res/Tiles/WideLogo.scale-80.png"
    "../res/Tiles/WideTile.scale-100.png"
    "../res/Tiles/WideTile.scale-125.png"
    "../res/Tiles/WideTile.scale-150.png"
    "../res/Tiles/WideTile.scale-200.png"
    "../res/Tiles/WideTile.scale-400.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.scale-100_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.scale-125_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.scale-150_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.scale-200_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.scale-400_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-16_altform-unplated_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-16_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-20_altform-unplated_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-20_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-24_altform-unplated_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-24_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-256_altform-unplated_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-256_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-30_altform-unplated_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-30_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-32_altform-unplated_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-32_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-36_altform-unplated_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-36_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-40_altform-unplated_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-40_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-48_altform-unplated_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-48_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-60_altform-unplated_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-60_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-64_altform-unplated_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-64_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-72_altform-unplated_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-72_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-80_altform-unplated_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-80_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-96_altform-unplated_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryAppList.targetsize-96_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryBadgeLogo.scale-100_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryBadgeLogo.scale-125_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryBadgeLogo.scale-150_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryBadgeLogo.scale-200_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryBadgeLogo.scale-400_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryLargeTile.scale-100_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryLargeTile.scale-125_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryLargeTile.scale-150_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryLargeTile.scale-200_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryLargeTile.scale-400_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryMedTile.scale-100_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryMedTile.scale-125_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryMedTile.scale-150_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryMedTile.scale-200_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryMedTile.scale-400_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGallerySmallTile.scale-100_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGallerySmallTile.scale-125_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGallerySmallTile.scale-150_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGallerySmallTile.scale-200_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGallerySmallTile.scale-400_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGallerySplashScreen.scale-100_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGallerySplashScreen.scale-125_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGallerySplashScreen.scale-150_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGallerySplashScreen.scale-200_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGallerySplashScreen.scale-400_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryStoreLogo.scale-100_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryStoreLogo.scale-125_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryStoreLogo.scale-150_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryStoreLogo.scale-200_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryStoreLogo.scale-400_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryWideTile.scale-100_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryWideTile.scale-125_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryWideTile.scale-150_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryWideTile.scale-200_contrast-black.png"
    "../res/Tiles/contrast-black/XAMLControlsGalleryWideTile.scale-400_contrast-black.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.scale-100_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.scale-125_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.scale-150_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.scale-200_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.scale-400_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-16_altform-unplated_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-16_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-20_altform-unplated_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-20_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-24_altform-unplated_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-24_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-256_altform-unplated_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-256_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-30_altform-unplated_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-30_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-32_altform-unplated_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-32_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-36_altform-unplated_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-36_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-40_altform-unplated_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-40_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-48_altform-unplated_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-48_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-60_altform-unplated_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-60_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-64_altform-unplated_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-64_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-72_altform-unplated_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-72_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-80_altform-unplated_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-80_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-96_altform-unplated_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryAppList.targetsize-96_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryBadgeLogo.scale-100_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryBadgeLogo.scale-125_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryBadgeLogo.scale-150_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryBadgeLogo.scale-200_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryBadgeLogo.scale-400_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryLargeTile.scale-100_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryLargeTile.scale-125_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryLargeTile.scale-150_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryLargeTile.scale-200_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryLargeTile.scale-400_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryMedTile.scale-100_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryMedTile.scale-125_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryMedTile.scale-150_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryMedTile.scale-200_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryMedTile.scale-400_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGallerySmallTile.scale-100_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGallerySmallTile.scale-125_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGallerySmallTile.scale-150_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGallerySmallTile.scale-200_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGallerySmallTile.scale-400_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGallerySplashScreen.scale-100_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGallerySplashScreen.scale-125_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGallerySplashScreen.scale-150_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGallerySplashScreen.scale-200_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGallerySplashScreen.scale-400_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryStoreLogo.scale-100_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryStoreLogo.scale-125_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryStoreLogo.scale-150_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryStoreLogo.scale-200_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryStoreLogo.scale-400_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryWideTile.scale-100_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryWideTile.scale-125_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryWideTile.scale-150_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryWideTile.scale-200_contrast-white.png"
    "../res/Tiles/contrast-white/XAMLControlsGalleryWideTile.scale-400_contrast-white.png"
)
source_group(TREE ${CMAKE_SOURCE_DIR} FILES ${RES_FILES})

qt_add_resources(${TGT} "FluControlsRes"
    PREFIX "/"
    BASE ".."
    FILES
    ${RES_FILES}
)

target_link_libraries(${TGT}
    PUBLIC
    framelesshelper
    qwindowkit
    FluUtils
)
